// Echo service for testing Quill
syntax = "proto3";

package echo.v1;

import "quill/annotations.proto";

// Echo service that returns whatever you send it
service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse) {
    option (quill.rpc) = { idempotent: true };
  }
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}
